//! The top of a [`Term`] is a [`Node`] or the term is a bare
//! [`Metavariable`].
//!
//! [`Metavariable`]: `crate::Metavariable`
//! [`Node`]: `crate::Node`
//! [`Term`]: `crate::Term`

/// TODO.
pub enum NodeBytes {}
